# rhotm

./: .gitignore  a.out  build.sh  main.c  main_with_size.c
EntryDataGTK/: 007_gtk  FirstPart.c  FirstPart.h  get_path.c  get_path.h  main.c
GTK_IMAGE/: CMakeLists.txt  GTK_IMAGE  GTK_IMAGE.cbp  README.md
GTK_IMAGE/src/: Functions.cpp  Functions.h  MainWindow.h  main.cpp
GTK_LOCAL_FOLDER/: tests_result.txt
GTK_LOCAL_FOLDER/src/: get_path.h  gtk_librarys.h  main.c  mask.c
GTK_LOCAL_FOLDER/test/: tests.h
Tasks/: CLASS_GITHUB_REPO.md  GTK_IMAGEMAGIC.md
src/: get_path.c  get_path.h  gtk_librarys.h  main.c  main_with_size.c  mask.c  mask.h  tests.c  tests.h
test/: testmain.c  tests.c  tests.h
